# parallel

./: .gitignore  CMakeLists.txt  Context.cxx  Context.h  DataFile.cxx  DataFile.h  Database.cxx  Database.h  Decoder.cxx  Decoder.h  Detector.cxx  Detector.h  DetectorTypeA.cxx  DetectorTypeA.h  DetectorTypeB.cxx  DetectorTypeB.h  DetectorTypeC.cxx  DetectorTypeC.h  LOG.txt  Makefile  Output.cxx  Output.h  Podd.h  README  ThreadPool.cxx  ThreadPool.h  ThreadPool.hpp  Util.cxx  Util.h  Variable.cxx  Variable.h  benchmark.sh  check-speed.sh  generate.cxx  plot-benchmark.py  plot-speed.py  ppodd-tbb.cxx  ppodd.cxx  rawdata.h  test.odef
Examples/: CMakeLists.txt  Makefile  ThreadTest.cxx
